/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/registry/member/pb/gen";

package ukama.registry.member.v1;

import "validator.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "ukama/roles.proto";
import "ukama/notification.proto";

service MemberService {

    /* Members */
    rpc AddMember(AddMemberRequest) returns (MemberResponse);
    rpc AddOtherMember(AddMemberRequest) returns (MemberResponse);
    rpc GetMember(MemberRequest) returns (MemberResponse);
    rpc GetMemberByUserId(GetMemberByUserIdRequest) returns (GetMemberByUserIdResponse);
    rpc GetMembers(GetMembersRequest) returns (GetMembersResponse);
    rpc UpdateMember(UpdateMemberRequest) returns (MemberResponse);
    rpc RemoveMember(MemberRequest) returns (MemberResponse);
}

message GetMemberByUserIdRequest {
    string memberId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
}

message GetMemberByUserIdResponse {
    Member member = 1;
}

message AddMemberRequest{
    string memberId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
    string userUuid = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "user_uuid"];
    ukama.common.v1.RoleType role = 3;
}

message MemberRequest{
    string memberId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
}

message MemberResponse{
  Member member = 1;
}

message GetMembersRequest {
}

message GetMembersResponse{
    repeated Member members = 2;
}

message UpdateMemberRequest {
    string memberId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
    bool isDeactivated = 4 [json_name = "is_deactivated"];
}

message Member {
    string memberId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "member_id"];
    string userId = 2 [json_name = "user_id", (validator.field) = {uuid_ver: 4, string_not_empty: true}];
    ukama.common.v1.RoleType role = 3 ;
    bool isDeactivated = 4 [json_name = "is_deactivated"];
    google.protobuf.Timestamp created_at = 5 [json_name = "member_since"];
}

